--- a/2_IDA/2_Initial_Data_Analysis.ipynb
+++ b/2_IDA/2_Initial_Data_Analysis.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "656d8c75",
    "metadata": {},
    "outputs": [],
@@ -60,35 +60,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2938 entries, 0 to 2937\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   Country         2938 non-null   object \n",
-      " 1   Year            2938 non-null   int64  \n",
-      " 2   Status          2938 non-null   object \n",
-      " 3   LifeExpectancy  2928 non-null   float64\n",
-      " 4   AdultMort       2928 non-null   float64\n",
-      " 5   InfD            2938 non-null   int64  \n",
-      " 6   EtOH            2744 non-null   float64\n",
-      " 7   PercExpen       2938 non-null   float64\n",
-      " 8   HepB            2385 non-null   float64\n",
-      " 9   Measles         2938 non-null   int64  \n",
-      " 10  BMI             2904 non-null   float64\n",
-      " 11  lt5yD           2938 non-null   int64  \n",
-      " 12  Polio           2919 non-null   float64\n",
-      " 13  TotalExpen      2712 non-null   float64\n",
-      " 14  DTP             2919 non-null   float64\n",
-      " 15  HIV             2938 non-null   float64\n",
-      " 16  GDP             2490 non-null   float64\n",
-      " 17  Population      2286 non-null   float64\n",
-      " 18  Thin1_19y       2904 non-null   float64\n",
-      " 19  Thin5_9y        2904 non-null   float64\n",
-      " 20  Income          2771 non-null   float64\n",
-      " 21  Education       2775 non-null   float64\n",
-      "dtypes: float64(16), int64(4), object(2)\n",
-      "memory usage: 505.1+ KB\n"
+      "\n",
+      "Original File \"Life_Expectancy_Data.csv\" has  2938 observations & 22 features.\n",
+      "\n"
      ]
     }
    ],
@@ -103,8 +77,6 @@
     "                'Education']\n",
     "\n",
     "df = pd.read_csv(path+filename, names=column_names, header=0)\n",
-    "\n",
-    "\n",
     "\n",
     "print(f'\\nOriginal File \"{filename}\" has ', df.shape[0], 'observations &', df.shape[1], 'features.\\n')"
    ]
@@ -422,14 +394,6 @@
    "source": [
     "df.to_csv(\"Clean_LE_Data_w_Means_2.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b05c55fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
