--- a/5_Feature_ENG/Feature_Engineering_catgorize_nations_2_regions.ipynb
+++ b/5_Feature_ENG/Feature_Engineering_catgorize_nations_2_regions.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "From: Matt Curcio, matt.curcio.us@gmail.com\n",
     "\n",
-    "Date: 2023-01-29\n",
+    "Date: 2023-02-28\n",
     "\n",
     "Re:&nbsp;&nbsp;&nbsp; Categorize countries into regions\n",
     "\n",
@@ -22,22 +22,32 @@
     "\n",
     "## Excutive Summary\n",
     "\n",
+    "This notebook simply bins 183 countries into 8 (subjective) regions.\n",
+    "\n",
+    "This notebook, aligns with the Linux philosphy that programs should do one thing, lol\n",
     "\n",
     "---\n",
     "\n",
+    "## Introduction\n",
     "\n",
-    "Categorize countries into regions\n",
-    "\n",
-    "This file takes input of  `Clean_LE_Data_Post_EDA_3.csv` and produces output of `Clean_LE_Data_FEng_4.csv`\n",
     "\n",
     "- This list of countries and their regions was found on the site:\n",
     "\n",
-    "    https://www.thoughtco.com/official-listing-of-countries-world-region-1435153"
+    "    https://www.thoughtco.com/official-listing-of-countries-world-region-1435153\n",
+    "    \n",
+    "- Q. How many coountries in EACH region?\n",
+    "\n",
+    "\n",
+    "- This file utilizes:\n",
+    "  \n",
+    "  Input: `Clean_LE_Data_Post_EDA_3.csv` \n",
+    "\n",
+    "  Output: `Clean_LE_Regions.csv`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "bb04b6d3",
    "metadata": {},
    "outputs": [],
@@ -51,44 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "2026d29a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2928 entries, 0 to 2927\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column          Non-Null Count  Dtype   \n",
-      "---  ------          --------------  -----   \n",
-      " 0   Country         2928 non-null   object  \n",
-      " 1   Year            2928 non-null   int64   \n",
-      " 2   Status          2928 non-null   category\n",
-      " 3   LifeExpectancy  2928 non-null   float64 \n",
-      " 4   AdultMort       2928 non-null   float64 \n",
-      " 5   EtOH            2928 non-null   float64 \n",
-      " 6   PercExpen       2928 non-null   float64 \n",
-      " 7   Measles         2928 non-null   int64   \n",
-      " 8   BMI             2928 non-null   float64 \n",
-      " 9   lt5yD           2928 non-null   int64   \n",
-      " 10  Polio           2928 non-null   float64 \n",
-      " 11  TotalExpen      2928 non-null   float64 \n",
-      " 12  DTP             2928 non-null   float64 \n",
-      " 13  HIV             2928 non-null   float64 \n",
-      " 14  Thin1_19y       2928 non-null   float64 \n",
-      " 15  Income          2928 non-null   float64 \n",
-      " 16  Education       2928 non-null   float64 \n",
-      "dtypes: category(1), float64(12), int64(3), object(1)\n",
-      "memory usage: 369.1+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "path = ''\n",
-    "filename = 'Clean_LE_Data_Post_EDA_3.csv'\n",
+    "path = '../data/processed/'\n",
+    "filename = 'Clean_LE_Data_w_Means_2.csv'\n",
     "\n",
     "df = pd.read_csv(path+filename, header=0)"
    ]
@@ -104,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "fe010053",
    "metadata": {},
    "outputs": [
@@ -165,7 +144,7 @@
        "       'Zambia', 'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "505bf3d4",
    "metadata": {},
    "outputs": [],
@@ -202,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "378d56e9",
    "metadata": {},
    "outputs": [],
@@ -212,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "ad31034c",
    "metadata": {},
    "outputs": [],
@@ -222,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "81729892",
    "metadata": {},
    "outputs": [],
@@ -232,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "8f56d73b",
    "metadata": {},
    "outputs": [],
@@ -242,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "1b9bcb09",
    "metadata": {},
    "outputs": [],
@@ -252,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "8696b3ad",
    "metadata": {},
    "outputs": [],
@@ -262,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "6f7c31a6",
    "metadata": {},
    "outputs": [],
@@ -272,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "3c285567",
    "metadata": {},
    "outputs": [
@@ -323,8 +302,6 @@
     "\n",
     "assert 1==country_2_region('Kazakhstan')\n",
     "\n",
-    "assert 6==country_2_region('Samoa')\n",
-    "\n",
     "assert 2==country_2_region('Algeria')\n",
     "\n",
     "assert 3==country_2_region('Bolivia')\n",
@@ -332,6 +309,8 @@
     "assert 4==country_2_region('Canada')\n",
     "\n",
     "assert 5==country_2_region('Andorra')\n",
+    "\n",
+    "assert 6==country_2_region('Samoa')\n",
     "\n",
     "assert 7==country_2_region('Botswana')\n",
     "\n",
@@ -342,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "8dc95b6f",
    "metadata": {},
    "outputs": [
@@ -352,7 +331,7 @@
        "array([2, 5, 7, 8, 3, 6, 1, 4])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "a89f5a3b",
    "metadata": {},
    "outputs": [
@@ -405,6 +384,7 @@
        "      <th>Status</th>\n",
        "      <th>LifeExpectancy</th>\n",
        "      <th>AdultMort</th>\n",
+       "      <th>InfD</th>\n",
        "      <th>EtOH</th>\n",
        "      <th>PercExpen</th>\n",
        "      <th>Measles</th>\n",
@@ -415,6 +395,7 @@
        "      <th>DTP</th>\n",
        "      <th>HIV</th>\n",
        "      <th>Thin1_19y</th>\n",
+       "      <th>Thin5_9y</th>\n",
        "      <th>Income</th>\n",
        "      <th>Education</th>\n",
        "      <th>Region</th>\n",
@@ -422,101 +403,159 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2015</td>\n",
+       "      <th>2923</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2004</td>\n",
        "      <td>0</td>\n",
+       "      <td>44.3</td>\n",
+       "      <td>723.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>7.13</td>\n",
        "      <td>65.0</td>\n",
-       "      <td>263.0</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>71.279624</td>\n",
-       "      <td>1154</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>83</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>8.16</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>0.479</td>\n",
-       "      <td>10.1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2014</td>\n",
+       "      <th>2924</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2003</td>\n",
        "      <td>0</td>\n",
-       "      <td>59.9</td>\n",
-       "      <td>271.0</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>73.523582</td>\n",
-       "      <td>492</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>86</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>8.18</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>0.476</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>0</td>\n",
-       "      <td>59.9</td>\n",
-       "      <td>268.0</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>73.219243</td>\n",
-       "      <td>430</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>89</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>8.13</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>0.470</td>\n",
+       "      <td>44.5</td>\n",
+       "      <td>715.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>998</td>\n",
+       "      <td>26.7</td>\n",
+       "      <td>41</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.52</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>9.8</td>\n",
        "      <td>9.9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.418</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2925</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44.8</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>304</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>40</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>6.53</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>39.8</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.427</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2926</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.3</td>\n",
+       "      <td>686.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>529</td>\n",
+       "      <td>25.9</td>\n",
+       "      <td>39</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>6.16</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.427</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2927</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>665.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1483</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>39</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>7.10</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>43.5</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0.434</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Country  Year Status  LifeExpectancy  AdultMort  EtOH  PercExpen  \\\n",
-       "0  Afghanistan  2015      0            65.0      263.0  0.01  71.279624   \n",
-       "1  Afghanistan  2014      0            59.9      271.0  0.01  73.523582   \n",
-       "2  Afghanistan  2013      0            59.9      268.0  0.01  73.219243   \n",
+       "       Country  Year  Status  LifeExpectancy  AdultMort  InfD  EtOH  \\\n",
+       "2923  Zimbabwe  2004       0            44.3      723.0    27  4.36   \n",
+       "2924  Zimbabwe  2003       0            44.5      715.0    26  4.06   \n",
+       "2925  Zimbabwe  2002       0            44.8       73.0    25  4.43   \n",
+       "2926  Zimbabwe  2001       0            45.3      686.0    25  1.72   \n",
+       "2927  Zimbabwe  2000       0            46.0      665.0    24  1.68   \n",
        "\n",
-       "   Measles   BMI  lt5yD  Polio  TotalExpen   DTP  HIV  Thin1_19y  Income  \\\n",
-       "0     1154  19.1     83    6.0        8.16  65.0  0.1       17.2   0.479   \n",
-       "1      492  18.6     86   58.0        8.18  62.0  0.1       17.5   0.476   \n",
-       "2      430  18.1     89   62.0        8.13  64.0  0.1       17.7   0.470   \n",
+       "      PercExpen  Measles   BMI  lt5yD  Polio  TotalExpen   DTP   HIV  \\\n",
+       "2923        0.0       31  27.1     42   67.0        7.13  65.0  33.6   \n",
+       "2924        0.0      998  26.7     41    7.0        6.52  68.0  36.7   \n",
+       "2925        0.0      304  26.3     40   73.0        6.53  71.0  39.8   \n",
+       "2926        0.0      529  25.9     39   76.0        6.16  75.0  42.1   \n",
+       "2927        0.0     1483  25.5     39   78.0        7.10  78.0  43.5   \n",
        "\n",
-       "   Education  Region  \n",
-       "0       10.1       2  \n",
-       "1       10.0       2  \n",
-       "2        9.9       2  "
+       "      Thin1_19y  Thin5_9y  Income  Education  Region  \n",
+       "2923        9.4       9.4   0.407        9.2       7  \n",
+       "2924        9.8       9.9   0.418        9.5       7  \n",
+       "2925        1.2       1.3   0.427       10.0       7  \n",
+       "2926        1.6       1.7   0.427        9.8       7  \n",
+       "2927       11.0      11.2   0.434        9.8       7  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = ''\n",
-    "file_name = 'Clean_LE_Data_Regions.csv'\n",
+    "path = '../data/processed/'\n",
+    "filename = 'Clean_LE_Regions.csv'\n",
     "\n",
-    "df.to_csv(file_name, index=False)\n",
+    "df.to_csv(path+filename, index=False)\n",
     "\n",
-    "df.head(5)"
+    "df.tail(5)"
    ]
   }
  ],
